--- a/src/blog1.css
+++ b/src/blog1.css
@@ -52,16 +52,18 @@ li a:hover {
 
  .heading {
     padding: 1.2rem;
-    background-color:#C8AB83; 
+    background-color:rgba(200, 171, 131, 0.6);
     text-align: center; 
     padding: 0.5em;
     color: black; 
     font-weight: 1;
     border-color: white;
     border-style: groove;
-    margin: 2rem 1rem 1rem 1rem; 
+    margin: 2rem 1rem 1rem; 
     width: 16rem;
     font-family: garamond, serif;
+    border-radius: 40px;
+
  } 
 /* subheadings */
  header {
@@ -75,7 +77,7 @@ li a:hover {
  #left, #right {
     height: 2rem; 
     width: 2rem; 
-    margin: 2.5rem 0 1rem 0; 
+    margin: 2.5rem 0 1rem; 
  }
 
 /*color change on left and right */
@@ -97,7 +99,7 @@ li a:hover {
 
 
  .para1 {
-    background-color: rgba(127,99,110);
+    background-color: rgba(127,99,110,0.5);
     padding: 2rem;
     margin: 1rem;
     border-color: white;
@@ -108,6 +110,8 @@ li a:hover {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content:flex-start;
+    border-radius: 25px;
+
     
  }
 
@@ -117,7 +121,7 @@ li a:hover {
  }
 
  .para2 {
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0.6);
     padding: 2rem;
     margin: 1rem;
     border-color: white;
@@ -127,6 +131,7 @@ li a:hover {
     font-family: garamond, serif;
     flex-wrap: wrap;
     justify-content:flex-start;
+    border-radius: 25px;
  }
 
  ol.para2 {
@@ -164,9 +169,20 @@ li a:hover {
 @media only screen and (min-width:480px) and (max-width:899px) {
 
     li a {
-        font-size: 1em; 
+        font-size: 0.8em; 
     }
 
+    .heading {
+        font-size: 2em;
+    }
+
+    #left, #right {
+        margin-top: 3em;
+    }
+
+    .sub, .para1, .para2{
+        font-size: 1.3em;
+    }
 }
 
 /* Desktop */
@@ -177,8 +193,24 @@ li a:hover {
         font-size: 1em; 
     }
 
+.heading {
+        font-size: 2em;   
+    }
 
+    #left, #right {
+        margin-top: 3em;
+    }
 
+    .para1, .para2{
+        font-size: 1.3em;
+        width: 65vw;
+        
+    }
+    .sub {
+        font-size: 2em;
+    }
+
+ 
 }
 
 
