--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 
 /* Navigation bar */
+
 ul {
     display: flex;
     overflow: hidden;
@@ -43,10 +44,6 @@ main  {
     align-items: center;
     }
     
-
-
-
-
 /* photo */
 
 #pfp {
@@ -56,6 +53,7 @@ main  {
     margin-top: 2rem;
     border-color: white;
     border-style: groove;
+   
     
 }
 
@@ -69,9 +67,10 @@ main  {
      background-color: #CACAAA;
      border-color: white;
      border-style: groove;
-     padding: 1rem;
+     padding: 2rem;
      width: 80vw;
      font-family: Garamond, serif; 
+     border-radius: 65px;
 }
 
 .container2 {
@@ -82,8 +81,9 @@ main  {
     border-color: white;
     border-style: groove;
     font-family: Garamond, serif; 
-    padding: 1rem; 
+    padding: 2rem; 
     width: 80vw;
+    border-radius: 65px;
    
 }
 
@@ -112,7 +112,6 @@ figure {
     display: flex;
     justify-content: center;    
     font-family: Garamond, serif; 
-
 }
 
 
@@ -133,16 +132,16 @@ figure {
     }
 
 
-    .container1,  {
+    .container1  {
         height: 40vh;
-        font-size: 1em;   
+        font-size:1em;   
     }
 
     .container2 {
         height: 30vh;
         font-size: 1em;
+        }
     }
-}
 
 
 /* Desktop */
@@ -158,6 +157,8 @@ figure {
     justify-content: flex-start;
     justify-content: space-evenly;
     }
+
+    
                   
     #pfp {
         width: 24vw;
@@ -183,6 +184,7 @@ figure {
     figure {
       padding: 0 20rem 0 20rem; 
     }
+
 }
 
 
