--- a/src/about.css
+++ b/src/about.css
@@ -191,15 +191,17 @@ section {
 .para1 {
     width: 50vw;
     height: 30vw;
-    margin-left: -19em;
+    margin-left: -16em;
     margin-top: 6rem; 
+    font-size: 1.2rem;
 }
 
 .para2 {
     width: 50vw;
     height: 30vw;
-    margin-left: -22em;
+    margin-left: -19em;
     margin-top: 6rem; 
+    font-size: 1.2rem;
     
 }
 
