--- a/src/blog1.css
+++ b/src/blog1.css
@@ -202,7 +202,7 @@ li a:hover {
     }
 
     .para1, .para2{
-        font-size: 1.3em;
+        font-size: 1.3vw;
         width: 65vw;
         
     }
