--- a/src/exp.css
+++ b/src/exp.css
@@ -76,6 +76,7 @@ article {
     font-family: garamond, serif;
     border-radius: 65px;
     height: 100vw;
+    overflow: scroll;
  }
 
 /* wanted different margins on last paragraph so set up id */
@@ -88,6 +89,7 @@ article {
     font-family: garamond, serif;
     border-radius: 65px;
     height: 70vw;
+    overflow: scroll;
  }
 
  .readlink:link {
@@ -177,6 +179,7 @@ li a {
     height: 25vw; 
     order: 1; 
     margin-left: 36vw;
+    margin-bottom: 5vw
   
     
 }
@@ -205,7 +208,7 @@ article {
 }
 
 #lastpara {
-    margin-top: 2rem; 
+    margin-top:2.5em; 
 }
 
 }
